Updated sopra-collection path in submodules
Signed-off-by: the-limerent <florian.sihler@uni-ulm.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/EagleoutIce/pnp-skywrath-documentclass.git
 [submodule "sopra-collection"]
 	path = sopra-collection
-	url = git@github.com:EagleoutIce/sopra-collection.git
+	url = https://github.com/EagleoutIce/sopra-collection.git
 [submodule "lilly-dir"]
 	path = lilly-dir
 	url = https://github.com/EagleoutIce/lilly-dir
